--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,4 @@ production:
   database: rails_rent_cars_challenge_production
   username: rails_rent_cars_challenge
   password: <%= ENV['RAILS_RENT_CARS_CHALLENGE_DATABASE_PASSWORD'] %>
+  url: <%= ENV['POSTGRESQL_ADDON_URI'] %>
