--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: rails_rent_cars_challenge_production
-  username: rails_rent_cars_challenge
-  password: <%= ENV['RAILS_RENT_CARS_CHALLENGE_DATABASE_PASSWORD'] %>
+  # database: rails_rent_cars_challenge_production
+  # username: rails_rent_cars_challenge
+  # password: <%= ENV['RAILS_RENT_CARS_CHALLENGE_DATABASE_PASSWORD'] %>
   url: <%= ENV['POSTGRESQL_ADDON_URI'] %>
