--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "The Good Car"
-meta_title: "What's you've always been missing"
-meta_description: "Renting car web app"
+meta_title: "The Good Car"
+meta_description: "What's you've always been missing"
 meta_image: "cover.png"
 twitter_account: "@product_twitter_account"   # required for Twitter Cards
